--- a/armada-ceph.yaml
+++ b/armada-ceph.yaml
@@ -10,7 +10,7 @@ data:
   values: {}
   source:
     type: local
-    location: /home/ubuntu/openstack-helm-infra
+    location: /tmp/openstack-helm-infra
     subpath: helm-toolkit
     reference: master
   dependencies: []
@@ -45,7 +45,7 @@ data:
         ingress: 2
   source:
     type: local
-    location: /home/ubuntu/openstack-helm
+    location: /tmp/openstack-helm
     subpath: ingress
     reference: master
   dependencies:
@@ -146,7 +146,7 @@ data:
       fluentd: true
   source:
     type: local
-    location: /home/ubuntu/openstack-helm
+    location: /tmp/openstack-helm
     subpath: ceph-mon
     reference: master
   dependencies:
@@ -213,7 +213,7 @@ data:
       fluentd: true
   source:
     type: local
-    location: /home/ubuntu/openstack-helm
+    location: /tmp/openstack-helm
     subpath: ceph-osd
     reference: master
   dependencies:
@@ -297,7 +297,7 @@ data:
               location: /var/lib/openstack-helm/ceph/osd/journal-one
   source:
     type: local
-    location: /home/ubuntu/openstack-helm
+    location: /tmp/openstack-helm
     subpath: ceph-client
     reference: master
   dependencies:
